Internal change.
PiperOrigin-RevId: 933269427
Change-Id: I2f5c5833dcbfdb2b09d9521ff5d64300b490af46